--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "bootstrap": "4.3.1",
     "react": "16.8.6",
     "react-bootstrap": "1.0.0-beta.14",
-    "react-dom": "16.8.6"
+    "react-dom": "16.8.6",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
