--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .idea/
 .vscode/
 .DS_Store
+_config.php
 node_modules/
+server/sessions/sess_*
 server/public/api/db_connection.php
-server/public/main.js
-server/public/main.js.map
+server/public/main.js*
