--- a/server/lego-collector.localhost.conf
+++ b/server/lego-collector.localhost.conf
@@ -2,11 +2,20 @@
 
   ServerName lego-collector.localhost
   ServerAdmin webmaster@localhost
+
   DocumentRoot /home/dev/lfz/lego-collector/server/public
 
+  RewriteEngine On
+
+  RewriteCond %{REQUEST_URI} ^/$
+  RewriteRule . /index.html [L]
+
+  RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_URI} -f
+  RewriteRule . - [L]
+
+  RewriteRule . %{DOCUMENT_ROOT}/index.php [L]
+
   <Directory /home/dev/lfz/lego-collector/server/public/>
-    Options Indexes FollowSymLinks
-    AllowOverride None
     Require all granted
   </Directory>
 
