--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "4.9.2",
     "bootstrap": "4.3.1",
     "react": "16.8.6",
     "react-bootstrap": "1.0.0-beta.14",
